pattern-lab/source/_patterns/03-components/hero/_hero.scss
.hero {
  background-size: cover;
  background-position: top center;
  position: relative;

  &--overlay-blue {
    @include overlay($c-blue, 0.4);
  }
  &--overlay-green {
    @include overlay($c-green, 0.4);
  }
  &--overlay-black {
    @include overlay($c-black);
  }
  &--overlay-yellow {
    @include overlay($c-yellow);
  }

  &__inner {
    z-index: 2;
    display: flex;
    flex-direction: column;
    align-items: center;
    .hero--shorter & {
      padding-top: $spacing--l;
      padding-bottom: $spacing--l;
    }
  }
  &__title {
    @include h2;
    color: $c-white;
    margin: 0;
    min-height: 150px;
    position: relative;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    width: 90%;
    justify-content: center;
    .hero--shorter & {
      min-height: 0;
      margin-bottom: $spacing--m;
    }
    @include breakpoint($bp--small) {
      min-height: 200px;
    }
  }
  &__content {
    background-color: $c-iron;
    padding: $spacing--m;
    width: 90%;
    margin-bottom: $spacing--m;
    text-align: center;
    .hero--shorter & {
      padding: 0;
      margin-bottom: 0;
      :last-child {
        margin-bottom: 0;
      }
    }
  }
  &__body {
    margin-bottom: $spacing--m;
    &:last-child {
      margin-bottom: 0;
    }
  }
  &__buttons {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    align-items: center;
  }
  @include breakpoint($bp--medium) {
    min-height: 300px;
    display: flex;
    &--shorter {
      min-height: 200px;
    }
    &--alignment-content-top {
      margin-top: $spacing--xl + $spacing--s;
    }
    &--alignment-content-bottom {
      margin-bottom: $spacing--xl + $spacing--s;
    }
    &__inner {
      justify-content: space-around;
      align-items: center;
      flex-direction: row;
      width: 100%;
      .hero--alignment-all-left & {
      }
      .hero--alignment-all-center & {
        flex-direction: column;
        flex-wrap: wrap;
        justify-content: center;
        .hero__title {
          width: grid-width(10);
          text-align: center;
          margin-bottom: $spacing--l;
        }
        .hero__content {
          width: grid-width(6);
          text-align: center;
        }
        .hero__body {
          margin-bottom: 0;
          /* stylelint-disable max-nesting-depth, selector-max-specificity */
          :last-child {
            margin-bottom: 0;
          }
          /* stylelint-enable max-nesting-depth, selector-max-specificity */
        }
      }
      .hero--alignment-all-right & {
        flex-direction: row-reverse;
      }
      .hero__title:last-child {
        margin-bottom: 0;
      }
    }
    &__title {
      @include h1;
      display: block;
      min-height: 0;
      width: grid-width(5);
    }
    &__content {
      width: grid-width(5);
      position: relative;
      padding: $spacing--xl;
      margin-bottom: 0;
      text-align: left;
      .hero--alignment-content-top & {
        align-self: flex-start;
        top: -1 * $spacing--xl;
      }
      .hero--alignment-content-middle & {
      }
      .hero--alignment-content-bottom & {
        bottom: -1 * $spacing--xl;
        align-self: flex-end;
      }
      .hero--alignment-content-bottom.hero--alignment-all-center & {
        align-self: center;
      }

    }

  }

  @include breakpoint($bp--xlarge) {
    min-height: 418px;
    &--shorter {
      min-height: 300px;
    }
  }

}

